
.. contents::


IN DEVELOPMENT
--------------

  FEATURES:

    * Content filters can now be used to provide custom conversion
      between the canonical format of content (i.e. as stored) and
      the convenience format of content (i.e. as created in working
      trees). See ``bzr help content-filters`` for further details.
      (Ian Clatworthy, Alexander Belchenko)


  IMPROVEMENTS:

    * Implemented a custom ``walkdirs_utf8`` implementation for win32.
      This uses a pyrex extension to get direct access to the
      ``FindFirstFileW`` style apis, rather than using ``listdir`` +
      ``lstat``. Shows a very strong improvement in commands like
      ``status`` and ``diff`` which have to iterate the working tree.
      Anywhere from 2x-6x faster depending on the size of the tree (bigger
      trees, bigger benefit.) (John Arbash Meinel)


  BUG FIXES:

    * Fix a test case that was failing if encoding wasn't UTF-8.
      (John Arbash Meinel, #247585)


  DOCUMENTATION:


  TESTING:


  API CHANGES:


  INTERNALS:

    * RuleSearchers return () instead of [] now when there are no matches.
      (Ian Clatworthy)


bzr 1.6beta3 2008-07-17
-----------------------

  FEATURES:

    * New ``pre_change_branch_tip`` hook that is called before the
      branch tip is moved, while the branch is write-locked.  See the User
      Reference for signature details.  (Andrew Bennetts)

    * Rule-based preferences can now be defined for selected files in
      selected branches, allowing commands and plugins to provide
      custom behaviour for files matching defined patterns.
      See ``Rule-based preferences`` (part of ``Configuring Bazaar``)
      in the User Guide and ``bzr help rules`` for more information.
      (Ian Clatworthy)

    * Sites may suggest a branch to stack new branches on.  (Aaron Bentley)

    * Stacked branches are now supported. See ``bzr help branch`` and 
      ``bzr help push``. (Robert Collins)

  IMPROVEMENTS:
