@@ -19,6 +19,10 @@ IN DEVELOPMENT
 
   IMPROVEMENTS:
 
+    * ``bzr cat`` now supports a ``--filters`` option to display the
+      content after content filters are applied.
+      (Ian Clatworthy)
+
     * Implemented a custom ``walkdirs_utf8`` implementation for win32.
       This uses a pyrex extension to get direct access to the
       ``FindFirstFileW`` style apis, rather than using ``listdir`` +
